[tool.poetry]
name = "fix-gtfs-data"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bar@bfore.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gtfs-kit = "^5.2.8"
httpx = "^0.24.1"
pydantic = "^2.3.0"
typer = "^0.9.0"
pytz = "^2023.3.post1"
python-bidi = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
